--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,11 +6,16 @@
 
 // подключения компонентов страницы
 @import "./components/header";
+@import "./components/footer";
+@import "./components/section-1";
+@import "./components/section-2";
+@import "./components/section-3";
+@import "./components/section-4";
+@import "./components/section-5";
+@import "./components/section-6";
+@import "./components/section-7";
+@import "./components/section-8";
+@import "./components/section-9";
 
-// тестовые стили, удалите их
-.page__body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--vh);
-}
+
+
