--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,2 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+ @include font-face("Lora", "../fonts/MullerRegular", 400, normal);
+ @include font-face("Lora", "../fonts/MullerRegular", 700, normal);
