--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,13 +8,13 @@ html {
   box-sizing: inherit;
 }
 
-.page {
+html {
   height: 100%;
   font-family: var(--font-family, sans-serif);
   -webkit-text-size-adjust: 100%;
 }
 
-.page__body {
+body {
   margin: 0;
   min-width: 320px;
   min-height: 100%;
@@ -31,9 +31,7 @@ a {
   text-decoration: none;
 }
 
-.site-container {
-  overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
-}
+
 
 .is-hidden {
   display: none !important; /* stylelint-disable-line declaration-no-important */
